src/test/resources/validation/error/queryReturningInterfaceIllegalArguments/schema.graphqls
type Kull implements Node @table {
  id: ID!
  navn: String! @column(name : "STUDIEKULLNAVN")
}

type Query {
  nodes(id: ID!, navn: String): Node
}
